[gd_scene load_steps=9 format=2]

[ext_resource path="res://Tilemap/characters_packed.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 24, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 24, 0, 24, 24 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "Jumping",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "Walking",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=6]
radius = 8.5

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 5 )
animation = "Jumping"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 3 )
shape = SubResource( 6 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.25, 0.25 )

[node name="MarginContainer" type="MarginContainer" parent="Camera2D"]
visible = false
anchor_right = 1.0
margin_right = 24.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Time" type="Label" parent="Camera2D/MarginContainer"]
margin_right = 24.0
margin_bottom = 14.0
grow_horizontal = 0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Health" type="Label" parent="Camera2D/MarginContainer"]
margin_right = 24.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "100"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RayCasts" type="Node2D" parent="."]

[node name="UpRayCast2D" type="RayCast2D" parent="RayCasts"]
enabled = true
cast_to = Vector2( 0, -7 )
collide_with_areas = true

[node name="LeftRayCast2D" type="RayCast2D" parent="RayCasts"]
enabled = true
cast_to = Vector2( -7, 0 )
collide_with_areas = true

[node name="RightRayCast2D" type="RayCast2D" parent="RayCasts"]
enabled = true
cast_to = Vector2( 7, 0 )
collide_with_areas = true
